Update to trim to 300, set image to 0.0.2 and add a latest tag. Update deployment YAML and README.md

--- a/deploy.yaml
+++ b/deploy.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: pybsposter
-          image: idjohnson/pybsposter:latest
+          image: harbor.freshbrewed.science/library/pybsposter:latest
           ports:
             - containerPort: 5000
 ---
