--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -31,10 +31,14 @@ jobs:
         run: |
           export BUILDIMGTAG="`cat Dockerfile | tail -n1 | sed 's/^.*\///g'`"
           export FINALBUILDTAG="`cat Dockerfile | tail -n1 | sed 's/^#//g'`"
+          export FINALBUILDLATEST="`cat Dockerfile | tail -n1 | sed 's/^#//g' | sed 's/:.*/:latest/'`"
           docker tag $BUILDIMGTAG $FINALBUILDTAG
+          docker tag $BUILDIMGTAG $FINALBUILDLATEST
           docker images
           echo $CR_PAT | docker login harbor.freshbrewed.science -u $CR_USER --password-stdin
           docker push $FINALBUILDTAG
+          # add a "latest" for others to use
+          docker push $FINALBUILDLATEST
         env: # Or as an environment variable
           CR_PAT: ${{ secrets.CR_PAT }}
           CR_USER: ${{ secrets.CR_USER }}
