--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -17,15 +17,14 @@ jobs:
         uses: actions/checkout@v2
       - run: echo "💡 The $ repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: Check on Binaries
-        run: |
-          which az
-          which aws
       - name: Build Dockerfile
         run: |
           export BUILDIMGTAG="`cat Dockerfile | tail -n1 | sed 's/^.*\///g'`"
           docker build -t $BUILDIMGTAG .
           docker images
+          # Package charts
+          cd charts
+          helm package pybsposter
       - id: tagandpush
         name: Tag and Push
         run: |
@@ -39,6 +38,9 @@ jobs:
           docker push $FINALBUILDTAG
           # add a "latest" for others to use
           docker push $FINALBUILDLATEST
+          # Push Charts
+          export CVER="`cat ./charts/pybsposter/Chart.yaml | grep 'version:' | sed 's/version: //' | tr -d '\n'`"
+          helm push ./charts/pybsposter/pybsposter-$CVER.tgz oci://harbor.freshbrewed.science/library/
         env: # Or as an environment variable
           CR_PAT: ${{ secrets.CR_PAT }}
           CR_USER: ${{ secrets.CR_USER }}
