new 0.1.0 version with FastAPI instead of Flask, new chart as well

--- a/charts/pybsposter/templates/deployment.yaml
+++ b/charts/pybsposter/templates/deployment.yaml
@@ -20,4 +20,6 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
           - containerPort: {{ .Values.service.targetPort }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
 
